@@ -4,11 +4,17 @@ import io.lumine.mythic.lib.MythicLib;
 import io.lumine.mythic.lib.element.Element;
 import net.Indyuce.mmoitems.ItemStats;
 import net.Indyuce.mmoitems.MMOItems;
+import net.Indyuce.mmoitems.api.ConfigFile;
 import net.Indyuce.mmoitems.api.Type;
 import net.Indyuce.mmoitems.stat.type.*;
 import net.Indyuce.mmoitems.util.ElementStatType;
+import org.apache.commons.lang3.Validate;
+import org.bukkit.Material;
+import org.bukkit.configuration.ConfigurationSection;
+import org.jetbrains.annotations.NotNull;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.*;
 import java.util.logging.Level;
@@ -36,8 +42,11 @@ public class StatManager {
                 if (Modifier.isStatic(field.getModifiers()) && Modifier.isFinal(field.getModifiers()) && field.get(null) instanceof ItemStat)
                     register((ItemStat<?, ?>) field.get(null));
             } catch (IllegalArgumentException | IllegalAccessException exception) {
-                MMOItems.plugin.getLogger().log(Level.WARNING, "Couldn't register stat called '%s'".formatted(field.getName()), exception.getMessage());
+                MMOItems.plugin.getLogger().log(Level.WARNING, String.format("Couldn't register stat called '%s'", field.getName()), exception.getMessage());
             }
+
+        // Custom stats
+        loadCustom();
     }
 
     /**
@@ -52,6 +61,25 @@ public class StatManager {
 
         // Register elemental stats
         loadElements();
+
+        // Register custom stats
+        loadCustom();
+    }
+
+    /**
+     * Load custom stats
+     */
+    public void loadCustom() {
+        ConfigManager.DefaultFile.CUSTOM_STATS.checkFile();
+        ConfigFile config = new ConfigFile("custom-stats");
+        ConfigurationSection section = config.getConfig().getConfigurationSection("custom-stats");
+        Validate.notNull(section, "Custom stats section is null");
+        section.getKeys(true)
+                .stream()
+                .filter(section::isConfigurationSection)
+                .map(section::getConfigurationSection)
+                .filter(Objects::nonNull)
+                .forEach(this::registerCustomStat);
     }
 
     /**
@@ -169,5 +197,51 @@ public class StatManager {
                     .stream()
                     .filter(stat::isCompatible)
                     .forEach(type -> type.getAvailableStats().add(stat));
+    }
+
+    private void registerCustomStat(@NotNull ConfigurationSection section) {
+        final String name = section.getString("name");
+        final String type = section.getString("type");
+
+        Validate.notNull(section, "Cannot register a custom stat from a null section");
+        Validate.notNull(name, "Cannot register a custom stat without a name");
+        Validate.notNull(type, "Cannot register a custom stat without a type");
+
+        Class<? extends ItemStat<?, ?>> statClass;
+        switch (type.toLowerCase()) {
+            case "double":
+                statClass = DoubleStat.class;
+                break;
+            case "boolean":
+                statClass = BooleanStat.class;
+                break;
+            case "text":
+                statClass = StringStat.class;
+                break;
+            case "text-list":
+                statClass = StringListStat.class;
+                break;
+            default:
+                throw new RuntimeException("Cannot register a custom stat of type " + type);
+        }
+
+        final String statId = String.format("custom_%s", name.replace(" ", "_")).toUpperCase();
+
+        // Lore
+        String[] lore = new String[0];
+        if (section.isList("lore"))
+            lore = section.getStringList("lore").toArray(new String[]{});
+        else if (section.isString("lore"))
+            lore = new String[]{section.getString("lore")};
+
+        // Create a new stat instance
+        try {
+            ItemStat<?, ?> stat = statClass.getConstructor(String.class, Material.class, String.class, String[].class, String[].class, Material[].class)
+                    .newInstance(statId, Material.PAPER, name, lore, new String[]{"!miscellaneous", "!block", "all"}, new Material[0]);
+            register(stat);
+        } catch (InstantiationException | IllegalAccessException | InvocationTargetException |
+                 NoSuchMethodException e) {
+            throw new RuntimeException("Unable to create a custom stat of type " + type, e);
+        }
     }
 }
